<resources>
    <string name="app_name">SkinGlow</string>
    <string name="content_description">image</string>
    <string name="title_login">Login</string>
    <string name="et_hint_email_id">email</string>
    <string name="et_hint_password">password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_and_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_first_name">first name</string>
    <string name="et_hint_confirm_password">confirm password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">please enter first name</string>
    <string name="err_msg_enter_last_name">please enter last name</string>
    <string name="err_msg_enter_email">please enter email</string>
    <string name="err_msg_enter_password">please enter password</string>
    <string name="err_msg_enter_confirm_password">please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">password and confirm password does not match</string>
    <string name="err_msg_agree_terms_and_condition">please agree to terms and conditions</string>
    <string name="msg_valid_input">your data is valid</string>
    <string name="please_wait">please wait&#8230;</string>
    <string name="msg_register_success">You have registered successfully!</string>
    <string name="err_msg_login">Failed to login!</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="forgot_password_title_description">Enter your e-mail address and we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="msg_email_sent_success">Email sent successfully</string>
    <string name="et_hint_mobile_number">mobile number</string>
    <string name="title_complete_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="btn_lbl_save">Save</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="storage_permission_granted">You already have the storage permission</string>
    <string name="read_storage_permission_denied">You have to enable storage permissions from settings</string>
    <string name="image_selection_failed">Failed to load the image!</string>
    <string name="err_msg_enter_mobile_number">Please enter an mobile number</string>
    <string name="msg_profile_update_success">Profile updated successfully</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="action_add_product">Add a product</string>
    <string name="title_add_product">Add product</string>
    <string name="et_hint_product_title">product title</string>
    <string name="et_hint_product_price">product price ($)</string>
    <string name="et_hint_product_description">product description</string>
    <string name="et_hint_product_quantity">product quantity</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="product_uploaded_success_message">Your product has uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_details">Product Details</string>
    <string name="lbl_product_description">Description</string>
    <string name="lbl_product_details_stock_quantity">Max Order Quantity</string>
    <string name="btn_lbl_add_to_cart">Add to cart</string>
    <string name="success_message_item_added_to_cart">Product was added to your cart.</string>
    <string name="btn_lbl_go_to_cart">Go to cart</string>
    <string name="title_my_cart">My cart</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">Out of stock</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Max order is %1$s!. You can not add more than max order.</string>
    <string name="msg_register_failure">Failed to register</string>
    <string name="lbl_product_size">Size</string>
    <string name="lbl_product_rating">Rating</string>
    <string name="action_filter">My Filter</string>
    <string name="option_skincare">Skincare</string>
    <string name="option_makeup">Makeup</string>
    <string name="option_clean_at_sephora">Clean at Sephora</string>
    <string name="option_hair">Hair</string>
    <string name="option_tools_and_brushes">Tools and Brushes</string>
    <string name="option_fragrance">Fragrance</string>
    <string name="option_bath_and_body">Bath and Body</string>
    <string name="option_gifts">Gifts</string>
    <string name="option_men">Men</string>
    <string name="option_mini_size">Mini Size</string>

</resources>